# RayTracer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: autocollimator.py  check_against_ynu.py  planoconvex_vs_biconvex.py
src/ray_tracer/: README.md  __init__.py  index_of_refraction.py  materials.py  optical_material.py  optical_surface.py  optical_system.py  paraxial_ray.py  wavelength.py
tests/: test_index_of_refraction.py  test_materials.py  test_optical_material.py  test_optical_surface.py  test_optical_system.py  test_paraxial_ray.py  test_wavelength.py
