[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ray_tracer"
version = "0.0.1"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "David Sheffield", email = "david@davidsheffield.net" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
    "scipy"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://github.com/davidsheffield/RayTracer"
"Bug Tracker" = "https://github.com/davidsheffield/RayTracer/issues"

[tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]
pythonpath = "src"
